Solving error on:   def update_y_timeseries
Hi, it all worked fine but I was running it in vs code jupyter notebooks and got an error updating the time series. 
The solution:  Instead of having:
    title = '{}
{}'.format(country_name, xaxis_column_name)
I changed it to:
        title = '{}{}'.format(country_name, xaxis_column_name)

Something about the line break threw an error.

--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -216,7 +216,7 @@
     "    country_name = hoverData['points'][0]['customdata']\n",
     "    dff = df[df['Country Name'] == country_name]\n",
     "    dff = dff[dff['Indicator Name'] == xaxis_column_name]\n",
-    "    title = '<b>{}</b><br>{}'.format(country_name, xaxis_column_name)\n",
+    "    title = '{}{}'.format(country_name, xaxis_column_name)\n",
     "    return create_time_series(dff, axis_type, title)\n",
     "\n",
     "\n",
